--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-Hello World
+body _{
+	background: black;
+	color: white;
+	font-family: sans-serif;
+  	font-size: 1em;
+}
+
+.large {
+	font-size: 2.25em;
+}
