--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ button {
 	position: fixed;
 }
 
-.discord {
-	position: fixed;
+.main2 {
+  border: 1px solid black;
+  margin: 1rem;
+  padding: 2rem 2rem;
+}
+.main {
+  display: inline-block;
+  border: 1px solid black;
+  padding: 1rem 1rem;
+  vertical-align: middle;
 }
