--- a/style.css
+++ b/style.css
@@ -5,25 +5,77 @@ body {
   	font-size: 1em;
 }
 
+a {
+	font-weight: bold;
+	text-decoration: none;
+	color: cyan !important;
+}
+
 .large {
 	font-size: 5em;
 }
 
-button {
-	background: rgb(87, 163, 230);
-	color: white;
+.button {
+	background: white;
 	border-radius: 5px;
 	position: fixed;
+	padding: 2 2;
+	border: none;
+	transition: background-color 0.2s ease-out 100ms;
+}
+
+.button:hover {
+	cursor: pointer;
+	background: #ccc;
 }
 
 .main2 {
-  border: 1px solid black;
-  margin: 1rem;
-  padding: 2rem 2rem;
+	border: 1px solid black;
+	margin: 1rem;
+	padding: 2rem 2rem;
 }
 .main {
-  display: inline-block;
-  border: 1px solid black;
-  padding: 1rem 1rem;
-  vertical-align: middle;
+	display: inline-block;
+	border: 1px solid black;
+	padding: 1rem 1rem;
+	vertical-align: middle;
+}
+
+.w3-container {
+  background: #36393f;
+}
+
+.contact-button {
+	float: right;
+	border-radius: 5px;
+	transition: background-color 0.2s ease-out 100ms;
+}
+
+.gray {
+	background: #292b2f !important;
+}
+
+.discordicon {
+	width: 20px;
+	filter: invert(84%) sepia(1%) saturate(0%) hue-rotate(138deg) brightness(94%) contrast(92%);
+}
+
+.x {
+	border-radius: 50px;
+	border:none;
+	display:inline-block;
+	padding:2px 10px;
+	vertical-align:middle;
+	overflow:hidden;
+	text-decoration:none;
+	color:inherit;
+	background-color:inherit;
+	text-align:center;
+	cursor:pointer;
+	white-space:nowrap;
+	transition: background-color 0.2s ease-out 100ms
+}
+
+.x:hover {
+	background-color: #CC575D !important;
 }
