--- a/style.css
+++ b/style.css
@@ -79,3 +79,7 @@ a {
 .x:hover {
 	background-color: #CC575D !important;
 }
+
+.rblx-img {
+	filter: invert(84%) sepia(1%) saturate(0%) hue-rotate(138deg) brightness(94%) contrast(92%);
+}
