--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ a {
 	background: #ccc;
 }
 
+button:hover {
+	cursor: pointer;
+}
+
 .main2 {
 	border: 1px solid black;
 	margin: 1rem;
@@ -81,5 +85,37 @@ a {
 }
 
 .rblx-img {
+	width: 25px;
 	filter: invert(84%) sepia(1%) saturate(0%) hue-rotate(138deg) brightness(94%) contrast(92%);
+}
+
+.download {
+	float: right;
+}
+
+.w3-code {
+	background: #262335 !important;
+}
+
+.w3-dark-grey {
+	background: #1E1C2A !important;
+}
+
+.clearfix {
+    *zoom:1 /* for IE */
+}
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.pythonkeywordcolor, .pythonstringcolor, .pythoncolor, .pythonnumbercolor {
+	font-family: times-new-roman;
+	letter-spacing: 1px;
 }
